--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation 'com.google.code.gson:gson:2.10.1'
+    // add dependency of retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // add dependency of card view
     implementation "androidx.cardview:cardview:1.0.0"
+// add dependency of material design
+    implementation 'com.google.android.material:material:1.8.0'
 }
