--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
    //  add dependency of on boarding
     implementation 'com.ramotion.paperonboarding:paper-onboarding:1.1.3'
+
+    // add dependency of ROOM
+    implementation "androidx.room:room-runtime:2.5.0"
+    annotationProcessor"androidx.room:room-compiler:2.5.0"
 }
