--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,9 @@ dependencies {
     // add dependency of ROOM
     implementation "androidx.room:room-runtime:2.5.0"
     annotationProcessor"androidx.room:room-compiler:2.5.0"
+// retrofit and gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
