--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // on boarding
+    implementation 'com.ramotion.paperonboarding:paper-onboarding:1.1.3'
+    //Viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 }
