--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
-    id 'com.android.application'
+   id 'com.android.application'
+    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -39,6 +41,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
    // implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -73,6 +76,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
-    implementation 'androidx.room:room-rxjava2:2.4.1'
+    implementation 'androidx.room:room-rxjava2:2.5.0'
+
+
+
 
 }
