--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
     implementation 'androidx.room:room-rxjava2:2.5.0'
+    // google sign in
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
 
 
