--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,11 +86,14 @@ dependencies {
     // google sign in
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
-
-
-
     //VideoPlay
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
+
+    //database with firebase
+
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
+
+    implementation 'com.google.firebase:firebase-database-ktx'
 
 
 }
